@@ -4,6 +4,8 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.10
 
 	- Documentation fixes (STR #2994, STR #2995, STR #3008)
+	- The backends did not return an OK status for the
+	  CUPS_SC_CMD_GET_BIDI side-channel command (STR #3029)
 	- The scheduler did not purge jobs that were missing a
 	  time-at-creation attribute, indicating a bad job control file
 	  (STR #3030)
